# miniprojekti

./: .gitignore  README.md  pyproject.toml  tasks.py
crawler/: crawler.py  parse.py  pyproject.toml
eda/: colab_copy.ipynb  eda.ipynb  word_rank.csv
evaluation/: evaluation.ipynb
miniprokkis-front/: .eslintrc.cjs  index.html  package-lock.json  package.json
outputs/: a.csv  a_most_watched.csv  aa.csv  aa_most_watched.csv  aaa.csv  aaa_most_watched.csv  aac.csv  aac_most_watched.csv  aaliyah.csv  aaliyah_most_watched.csv  aaron.csv  aaron_most_watched.csv  ab.csv  ab_most_watched.csv  aba.csv  aba_most_watched.csv  abandon.csv  abandon_most_watched.csv  abandoned.csv  abandoned_most_watched.csv  abatement.csv  abatement_most_watched.csv  abba.csv  abba_most_watched.csv  abbey.csv  abbey_most_watched.csv  abbott.csv  abbott_most_watched.csv  abbreviation.csv  abbreviation_most_watched.csv  abbreviations.csv  abbreviations_most_watched.csv  abby.csv  abby_most_watched.csv  abc.csv  abc_most_watched.csv  abdominal.csv  abdominal_most_watched.csv  abdul.csv  abdul_most_watched.csv  (+37770 more)
outputs2/: a_most_watched.csv  all_most_watched.csv  an_most_watched.csv  and_most_watched.csv  are_most_watched.csv  as_most_watched.csv  at_most_watched.csv  be_most_watched.csv  by_most_watched.csv  for_most_watched.csv  from_most_watched.csv  have_most_watched.csv  i_most_watched.csv  in_most_watched.csv  is_most_watched.csv  it_most_watched.csv  more_most_watched.csv  new_most_watched.csv  not_most_watched.csv  of_most_watched.csv  on_most_watched.csv  or_most_watched.csv  (+8 more)
src/: app.py
(+17 files in other folders)
