[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Topias Harjunpää <topias.harjunpaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
invoke = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
