[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Topias Harjunpää <topias.harjunpaa@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
invoke = "^2.2.0"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
pandas = "^2.1.1"
beautifulsoup4 = "^4.12.2"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
